2021-05-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Fix code generation bugs triggered by register arguments.

2021-05-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve tail calloptimization.

2021-05-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in handling of register parameters to function calls via pointer.

2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Fix handling of multiple register parameters.

2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Infrastructure for register parameters.

2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c:
	  Improve handling of register parameters.
	* src/stm8/gen.c:
	  Improve code generation for shift by slightly-less-than-a-multiple-of-8.
	* src/z80/gen.c,
	  src/z80/ralloc.c:
	  Increase some regalloc_dry_run_cost penalties to avoid invalid allocation even when all alternatives result in expensive spilling.

2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/gen.c:
	  Fixes for register parameter in a, l or hl.

2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/gen.h,
	  src/stm8/main.c:
	  Infrastructure for register parameters.
	* src/SDCCast.c:
	  Fix register parameters for printf->puts optimization.
	* src/z80/peep.c:
	  Fix bug #3234.

2021-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/gen.h,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Infrastructure for non-__z88dk_fastcall register arguments.
	* src/stm8/gen.c:
	  Fix bug #3233.
	* src/SDCCast.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Fix handling of register parameters of not-really-builtin memcpy.

2021-05-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/*/main.c:
	  Make restriction on register parameters for vararg functions port-specific.
